<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rby1_rt</name>
  <version>0.1.0</version>
  <description>C++ RT node replacing new_core_main.py — rby1-sdk → ROS2 bridge with RT loop</description>
  <maintainer email="jaehyun.yi@samsung.com">Jaehyun Yi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>interbotix_xs_msgs</depend>
  <depend>rby1_core_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
