<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>inspire_hand_driver</name>
  <version>0.1.0</version>
  <description>Inspire Hand Modbus TCP driver — C++ ROS2 node for 100Hz control</description>
  <maintainer email="todo@todo.com">todo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>inspire_hand_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
